Fixed overflow on switch case for cards

--- a/react-app/src/components/Dashboard/DeckPage/Cards/PreviewCards/PreviewCards.css
+++ b/react-app/src/components/Dashboard/DeckPage/Cards/PreviewCards/PreviewCards.css
@@ -2,7 +2,6 @@
     background-color: #fbfbfb;
     display: flex;
     flex-direction: column;
-    padding: 27px 0;
     position: relative;
 
     height: calc(100vh - 114px);
